<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Opening Activity -->
    <string name="app_name">Pulse Oximeter</string>
    <string name="action_settings">Settings</string>
    <string name="patient_list_label">Patient List</string>

    <!-- Settings Baud Rate Spinner -->
    <string-array name="planets_array">
        <item>1 reads/s</item>
        <item>2 reads/s</item>
        <item>5 reads/s</item>
        <item>10 reads/s</item>
    </string-array>

    <!-- Settings Record Rate Spinner -->
    <string-array name="record_rates_array">
        <item>3 per minute</item>
        <item>4 per minute</item>
        <item>6 per minute</item>
        <item>12 per minute</item>
        <item>24 per minute</item>
    </string-array>

    <!-- Settings Preference Save Strings -->
    <string name="auto_sync_pref">auto_sync_pref</string>
    <string name="baud_rate_pref">baud_rate_pref</string>
    <string name="read_rate_pref">read_rate_pref</string>
    <string name="dropbox_pref">dropbox_pref</string>
    <string name="google_pref">google_pref</string>
    <string name="custom_pref">custom_pref</string>
    <string name="custom_server_url">custom_server_url</string>

    <!-- Main Screen -->
    <string name="patient_name"><u>Bobby $murda:</u></string>

    <!-- App title -->
    <string name="app_title">PulseO<sup>Bobby $murda:</sup></string>


    <!-- Patient List Activity -->
    <string name="title_activity_patient_list">patientList</string>
    <string name="new_patient_label">New Patient</string>

    <!-- New Patient Activity -->
    <string name="title_activity_new_patient">New Patient</string>
    <string name="patient_info_label">Patient Info</string>
    <string name="first_name_label">First (Required)</string>
    <string name="last_name_label">Last (Required)</string>
    <string name="age_label">Age</string>
    <string name="address_label">Address</string>
    <string name="notes_label">Notes</string>
    <string name="save_label">Save</string>

    <!-- Patient History -->
    <string name="title_activity_patient_history">PatientHistory</string>
    <string name="new_reading_label">New Reading</string>
    <string name="title_activity_new_reading">NewReading</string>

    <!-- New Reading -->
    <string name="record_label">Record</string>
    <string name="sp02_label">SP02</string>
    <string name="fake_reading_label">92%</string>
    <string name="title_activity_sql__sandbox">SQL_Sandbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_settings">Settings</string>

</resources>
