<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.m5.oximetergui.NewReading">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_button"
        android:text="@string/record_label"/>
    
    <TextView android:text="@string/sp02_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:id="@+id/spo2_textview"
        android:layout_below="@id/record_button"/>

    <!-- TODO REPLACE TEXT WITH REAL READING -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spo2_textview"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/fake_reading_label"/>

</RelativeLayout>
